# socket

./: .gitignore  pnpm-lock.yaml
src/: CMakeLists.txt  common.hh  init.cc
src/app/: app.cc
src/cli/: cli.cc  templates.hh
src/core/: json.hh  runtime-preload.hh
src/desktop/: main.cc
src/extension/: ipc.cc
src/ipc/: bridge.cc  ipc.hh
src/mobile/: ios.mm
src/process/: process.hh  unix.cc  win.cc
src/window/: apple.mm  win.cc
